<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">CopsAndRobber</string>
    <string name="ime_aplikacije">Uhvati Lopova</string>
    <string name="labela_nova_igra">Nova igra</string>
    <string name="labela_postojece_igre">Exsisting games</string>
    <string name="labela_exit">Exit</string>
    <string name="labela_info">Instructions</string>
    
	<string name="menu_settings">Menu Settings</string>
	
	<string name="naslov_nova_igra">Nova igra</string>
    <string name="labela_ime_nove_igre">Enter name for new game:</string>
    <string name="labela_odaberite_ulogu">Choose a role</string>
    <string name="policajac_lopov_prompt">Choose a role</string>
    <string-array name="uloge">
        <item >Cop</item>
        <item>Robber</item>
    </string-array>
    <string name="dugme_kreiraj_igru">Kreiraj igru</string>
    
	<string name="naslov_odaberite_igru">Choose a game</string>
	<string name="igre_prompt">Choose a game</string>
	<string name="labela_pridruzi_se">Pridruzi se</string>
	<string name="radar_label">Radar</string>
	<string name="mapa_label">Map</string>
	<string name="lopov_label">Robber</string>
	<string name="policajac_label">Cop</string>
	<string name="timer_igre_label">00:00:00</string>
	<string name="dugme_ometac_label">Jammer</string>
	<string name="dugme_pancir_label">Armor</string>
	<string name="dugme_pucaj_label">Fire</string>
	<string name="br_metaka_label">Bullets:</string>
	<string name="metkovi_label">3</string>
	<string name="ulov_label">0 $</string>
 
</resources>