<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.76"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/radarLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radar_label" />

            <ImageView
                android:id="@+id/radarLinija4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/button_onoff_indicator_off" />

            <ImageView
                android:id="@+id/radarLinija3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/button_onoff_indicator_off" />

            <ImageView
                android:id="@+id/radarLinija2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/button_onoff_indicator_off" />

            <ImageView
                android:id="@+id/radarLinija1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/button_onoff_indicator_off" />

            <ImageView
                android:id="@+id/radarLinija0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/button_onoff_indicator_off" />
        </LinearLayout>

        <TextView
            android:id="@+id/timerIgre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.09"
            android:text="@string/timer_igre_label" />

        <Button
            android:id="@+id/dugmePancir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:text="@string/dugme_pancir_label" />

        <Button
            android:id="@+id/dugmeOmetac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.34"
            android:text="@string/dugme_ometac_label" />

    </LinearLayout>
    
    <com.google.android.maps.MapView 
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:state_enabled="true"
        android:clickable="true"
        android:apiKey="0y2EPB1P0QZ_3bC0JUA25cNkxn6vxkftBxEDRIg"

        />

</LinearLayout>